# RAG_chatbot_with_mcp

./: README.md  file.pbix  pyproject.toml
advancedrag/: QA.py  aws_comprehensive_integration.py  aws_s3_integration.py  aws_shared_utils.py  chunking.py  common.py  embeddings.py  extract.py  faiss_index.py  ge_integration.py  lexical.py  main_menu.py  mcp_server.py  processing.py  pyproject.toml  rag.py  reranking.py  script.py  search.py
advancedrag/Contents/: scores_log.csv  scores_log1.xlsx  validation_history.json
advancedrag/pages/: advanced_mode.py  aws_chat_mode.py  aws_configuration.py  aws_document_manager.py  aws_mode_selection.py  knowledge_and_scores_viewer.py  metrics.py  metrics_for_all.py  mode_selection_chat.py  mode_selection_quiz.py  normal_mode.py  quiz_generation.py  quiz_selector.py  validation_dashboard.py
